objects/EUR_CRM_Sales_Order_Items__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_AAV__c</fullName>
        <description>It&apos;s the discount % on bottles.

Update on 8/3/2016: it refers to a Number of Bottles. (SFASWI-68)</description>
        <label>AAV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Discount_Amount__c</fullName>
        <description>Used in ZA Sales Orders and retrieved from Product Discount (EU) Table</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Free_Bottles__c</fullName>
        <label>Free Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indexed_Item_Total__c</fullName>
        <formula>EUR_CRM_Quantity__c  *  EUR_CRM_Indexed_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexed Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indexed_Unit_Price__c</fullName>
        <formula>EUR_CRM_Sales_Order__r.EUR_CRM_Account__r.EUR_CRM_Price_Index__c *  EUR_CRM_SKU__r.EUR_CRM_Retail_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indexed Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Item_Total__c</fullName>
        <formula>EUR_CRM_Quantity__c * EUR_CRM_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_List_Price__c</fullName>
        <formula>EUR_CRM_SKU__r.EUR_CRM_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Value__c</fullName>
        <label>Order Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>Order Item (EU)</relationshipLabel>
        <relationshipName>Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Code__c</fullName>
        <description>Initially for ZA to avoid querying SKU Code in Apex for Web Service Callout</description>
        <formula>EUR_CRM_SKU__r.EUR_CRM_SKU_Code__c</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Order__c</fullName>
        <label>Sales Order</label>
        <referenceTo>EUR_CRM_Sales_Order__c</referenceTo>
        <relationshipName>Sales_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Item</label>
        <referenceTo>EUR_CRM_Stock_Item__c</referenceTo>
        <relationshipLabel>Sales Order Item (EU)</relationshipLabel>
        <relationshipName>Sales_Order_Item_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total__c</fullName>
        <description>The new field Total  will be the total of the following order components:

1. QTY
 2. AAV
 3. Free Bottles

(SFASWI-70)</description>
        <formula>EUR_CRM_AAV__c + EUR_CRM_Quantity__c + EUR_CRM_Free_Bottles__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Order Item (EU)</label>
    <listViews>
        <fullName>EUR_CRM_All_PT_Sales_Order_Item</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Sales_Order__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_SKU_Code__c</columns>
        <columns>EUR_CRM_Stock_Item__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Sales_Order_Items__c.EUR_PT_Indirect_On_Trade_Sales_Order_Items</value>
        </filters>
        <label>All PT Sales Order Item</label>
        <language>en_ZA</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SOI-{0000000000}</displayFormat>
        <label>Sales Order Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR AO Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AO_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR AO Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Direct_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR BG Direct Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Direct_Sales_Order_Item_from_Wholesaler</fullName>
        <active>true</active>
        <label>EUR BG Direct Sales Order Item from Wholesaler</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Indirect_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR BG Indirect Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Indirect_Sales_Order_Item_from_Customer</fullName>
        <active>true</active>
        <label>EUR BG Indirect Sales Order Item from Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Marketing_Product_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR BG Marketing Product Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR BG Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR CH Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR CH Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_Directly_to_Customer_Sales_Order_Item</fullName>
        <active>true</active>
        <label>DE Free Goods Directly to Customer Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_Order_from_SR_Stock</fullName>
        <active>false</active>
        <label>EUR DE Free Goods Order from SR Stock</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Free_Goods_from_SR_Stock_to_Customer_Sales_Order_Item</fullName>
        <active>true</active>
        <label>DE Free Goods from SR Stock to Customer Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Standard_Goods_Sales_Order_Item</fullName>
        <active>true</active>
        <label>DE Standard Goods Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Free_Goods_Order_Item_to_Customer</fullName>
        <active>true</active>
        <label>EUR DK Free Goods Order Item to Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Free_Goods_Order_from_SR_Stock</fullName>
        <active>true</active>
        <label>EUR DK Free Goods Order from SR Stock</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR DK Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR DK Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Order_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR KE Order Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR KE Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Direct_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR MA Direct Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Direct_Sales_Oder_Item</fullName>
        <active>true</active>
        <label>EUR MA Direct Sales Oder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Indirect_Reminder_Item</fullName>
        <active>true</active>
        <label>EUR MA Indirect Reminder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_MA_Indirect_Sales_Oder_Item</fullName>
        <active>true</active>
        <label>EUR MA Indirect Sales Oder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_NG_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR NG Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Indirect_On_Trade_Sales_Order_Items</fullName>
        <active>true</active>
        <label>EUR PT Indirect On Trade Sales Order Items</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR RU Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Direct_Sales_Order_Item</fullName>
        <active>true</active>
        <label>EUR ZA Direct Sales Order Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Free_Goods_Item</fullName>
        <active>true</active>
        <label>EUR ZA Free Goods Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Free_Goods_Order_Item</fullName>
        <active>true</active>
        <label>EUR ZA Free Goods Order Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>